# rust-axum-opentelemetry-otlp

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: main.rs
dotnet-project/: Program.cs  dotnet-otlp.csproj
src/: main.rs  telemetry.rs
telemetry/: Cargo.toml
telemetry/src/: lib.rs  subscriber.rs  trace_layer.rs
